# Rational

./: CMakeLists.txt  README.md  main.cpp
src/: Rational.cpp  Rational.h
tests/: test1.cpp  test2.cpp
